# biomes-voxeloo-light-kernelry

./: CMakeLists.txt  README.md  pyproject.toml
include/VoxelooLightKernelry/: light_kernel.hpp
scripts/: gen_light_kernel.py
